infrastructure/gatekeeper/constraints/block-nodeport-services/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  labels:
    owner: platform
  name: block-nodeport
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
