infrastructure/gatekeeper/tests/block-nodeport-services/fail.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  namespace: my-app
spec:
  type: NodePort
  selector:
    app: test
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
