infrastructure/gatekeeper/tests/block-nodeport-services/pass.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  namespace: my-app
spec:
  type: ClusterIP
  selector:
    app: test
  ports:
    - port: 80
      targetPort: 8080
